--- a/.github/workflows/docker-upload.yml
+++ b/.github/workflows/docker-upload.yml
@@ -9,6 +9,21 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_DB: test_db
+          POSTGRES_USER: testuser
+          POSTGRES_PASSWORD: testpass
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -33,8 +48,12 @@ jobs:
           mkdir -p src/main/resources
           printf "%s" "${{ secrets.API_KEY_CONTENT }}" > src/main/resources/API-KEY.yml
 
-      - name: Gradle 빌드
+      - name: Gradle 빌드 (PostgreSQL DB 연결)
         working-directory: ./lpick-backend
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/test_db
+          SPRING_DATASOURCE_USERNAME: testuser
+          SPRING_DATASOURCE_PASSWORD: testpass
         run: ./gradlew clean build
 
       - name: 도커 허브 로그인
