--- a/.github/workflows/docker-upload.yml
+++ b/.github/workflows/docker-upload.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  build-push-deploy:
     runs-on: ubuntu-latest
 
     services:
@@ -25,30 +25,26 @@ jobs:
           --health-retries=5
 
     steps:
-      - name: Checkout code
+      - name: 코드 체크아웃
         uses: actions/checkout@v3
 
-      - name: Set up JDK 21
+      - name: JDK 21 설치
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: 백엔드 디렉토리로 이동
-        working-directory: ./lpick-backend
-        run: echo "Moved to backend directory"
-
-      - name: gradlew 파일에 권한 추가
+      - name: gradlew 실행 권한 부여
         working-directory: ./lpick-backend
         run: chmod +x gradlew
 
-      - name: 시크릿에서 API-KEY 가져온 후 생성
+      - name: CI용 API-KEY.yml 생성
         working-directory: ./lpick-backend
         run: |
           mkdir -p src/main/resources
-          printf "%s" "${{ secrets.API_KEY_CONTENT }}" > src/main/resources/API-KEY.yml
+          echo "${{ secrets.API_KEY_VALUE }}" > src/main/resources/API-KEY.yml
 
-      - name: Gradle 빌드 (PostgreSQL DB 연결)
+      - name: Gradle 빌드
         working-directory: ./lpick-backend
         env:
           SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/test_db
@@ -56,14 +52,37 @@ jobs:
           SPRING_DATASOURCE_PASSWORD: testpass
         run: ./gradlew clean build
 
-      - name: 도커 허브 로그인
+      - name: Docker Hub 로그인
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: 빌드 후 DockerHub에 업로드
+      - name: Docker 이미지 빌드 및 푸시
         working-directory: ./lpick-backend
         run: |
           docker build -t junguijin/lpick-backend:latest .
           docker push junguijin/lpick-backend:latest
+
+      - name: EC2 배포 실행
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            echo "최신 이미지 pull"
+            docker pull junguijin/lpick-backend:latest
+
+            echo "기존 컨테이너 정지 및 삭제"
+            docker stop lpick-backend || true
+            docker rm lpick-backend || true
+
+            echo "API-KEY.yml 생성"
+            echo "${{ secrets.API_KEY_CONTENT }}" > ~/API-KEY.yml
+
+            echo "컨테이너 실행"
+            docker run -d --name lpick-backend \
+              -p 8080:8080 \
+              -v ~/API-KEY.yml:/app/API-KEY.yml \
+              junguijin/lpick-backend:latest
