--- a/lpick-backend/docker-compose.yml
+++ b/lpick-backend/docker-compose.yml
@@ -12,27 +12,21 @@ services:
       - redis
     volumes:
       - ./API-KEY.yml:/app/API-KEY.yml
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/prod_db
-      SPRING_DATASOURCE_USERNAME: produser
-      SPRING_DATASOURCE_PASSWORD: prodpass
-      SPRING_REDIS_HOST: redis
-      SPRING_REDIS_PORT: 6379
 
   postgres:
     image: postgres:15
     container_name: lpick-postgres
     restart: always
     environment:
-      POSTGRES_DB: prod_db
-      POSTGRES_USER: produser
-      POSTGRES_PASSWORD: prodpass
+      POSTGRES_DB: lpick
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: root
     volumes:
       - pgdata:/var/lib/postgresql/data
 
   redis:
     image: redis:7.2-alpine
-    container_name: lpick-redis
+    container_name: redis
     restart: always
     ports:
       - "6379:6379"
