--- a/lpick-backend/docker-compose.yml
+++ b/lpick-backend/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   postgres:
     image: postgres:15
-    container_name: lpick-postgres
+    container_name: postgres
     restart: always
     environment:
       POSTGRES_DB: lpick
@@ -23,6 +23,8 @@ services:
       POSTGRES_PASSWORD: root
     volumes:
       - pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
   redis:
     image: redis:7.2-alpine
