--- a/.github/workflows/docker-upload.yml
+++ b/.github/workflows/docker-upload.yml
@@ -64,25 +64,36 @@ jobs:
           docker build -t junguijin/lpick-backend:latest .
           docker push junguijin/lpick-backend:latest
 
-      - name: EC2 배포 실행
+      # docker-compose.yml 업로드
+      - name: docker-compose.yml 업로드
+        uses: appleboy/scp-action@v0.1.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "lpick-backend/docker-compose.yml"
+          target: "~/lpick-server/docker-compose.yml"
+
+      # API-KEY.yml 생성
+      - name: API-KEY.yml 생성
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo "최신 이미지 pull"
-            docker pull junguijin/lpick-backend:latest
+            mkdir -p ~/lpick-server
+            echo "${{ secrets.API_KEY_CONTENT }}" > ~/lpick-server/API-KEY.yml
 
-            echo "기존 컨테이너 정지 및 삭제"
-            docker stop lpick-backend || true
-            docker rm lpick-backend || true
-
-            echo "API-KEY.yml 생성"
-            echo "${{ secrets.API_KEY_CONTENT }}" > ~/API-KEY.yml
-
-            echo "컨테이너 실행"
-            docker run -d --name lpick-backend \
-              -p 8080:8080 \
-              -v ~/API-KEY.yml:/app/API-KEY.yml \
-              junguijin/lpick-backend:latest
+      # docker-compose로 서비스 실행
+      - name: EC2 docker-compose 실행
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd ~/lpick-server
+            docker-compose pull
+            docker-compose down
+            docker-compose up -d
