--- a/.github/workflows/docker-upload.yml
+++ b/.github/workflows/docker-upload.yml
@@ -72,7 +72,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "lpick-backend/docker-compose.yml"
-          target: "~/lpick-server/docker-compose.yml"
+          target: "~/lpick-server"
 
       # API-KEY.yml 생성
       - name: API-KEY.yml 생성
