--- a/.github/workflows/docker-upload.yml
+++ b/.github/workflows/docker-upload.yml
@@ -58,13 +58,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Docker 이미지 빌드 및 푸시
+      - name: Docker 이미지 빌드 및 푸시 (no cache)
         working-directory: ./lpick-backend
         run: |
-          docker build -t junguijin/lpick-backend:latest .
+          docker build --no-cache -t junguijin/lpick-backend:latest .
           docker push junguijin/lpick-backend:latest
 
-      # docker-compose.yml 업로드
       - name: docker-compose.yml 업로드
         uses: appleboy/scp-action@v0.1.3
         with:
@@ -72,9 +71,17 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "./lpick-backend/docker-compose.yml"
-          target: "~/lpick-server"
+          target: "~/lpick-server/lpick-backend"
 
-      # API-KEY.yml 생성
+      - name: JAR 파일 업로드
+        uses: appleboy/scp-action@v0.1.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "./lpick-backend/build/libs/lpick-backend-*.jar"
+          target: "~/lpick-server/lpick-backend"
+
       - name: API-KEY.yml 생성
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -82,10 +89,9 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            mkdir -p ~/lpick-server
+            mkdir -p ~/lpick-server/lpick-backend
             echo "${{ secrets.API_KEY_CONTENT }}" > ~/lpick-server/lpick-backend/API-KEY.yml
 
-      # docker-compose로 서비스 실행
       - name: EC2 docker-compose 실행
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -93,7 +99,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd ~/lpick-server/lpick-backend/
+            cd ~/lpick-server/lpick-backend
             docker-compose pull
             docker-compose down
             docker-compose up -d
