--- a/lpick-backend/src/main/resources/application.yml
+++ b/lpick-backend/src/main/resources/application.yml
@@ -57,10 +57,7 @@ springdoc:
     operationsSorter: method
     tagsSorter: alpha
     display-request-duration: true
-#    disable-swagger-default-url: true
+    disable-swagger-default-url: true
     use-root-path: true
-    urls:
-      - name: LPICK API
-        url: /v3/api-docs
     oauth2-redirect-url: https://lpick.duckdns.org/login/oauth2/code/kakao
     persistAuthorization: true  # Swagger UI 페이지 새로고침해도 인증정보 유지
