--- a/lpick-backend/src/main/resources/application.yml
+++ b/lpick-backend/src/main/resources/application.yml
@@ -59,5 +59,8 @@ springdoc:
     display-request-duration: true
     disable-swagger-default-url: true
     use-root-path: true
+    urls:
+      - name: LPICK API
+        url: /v3/api-docs
     oauth2-redirect-url: https://lpick.duckdns.org/login/oauth2/code/kakao
     persistAuthorization: true  # Swagger UI 페이지 새로고침해도 인증정보 유지
